Changed version number to "1.4.0-dev".
Per recent change to project versioning/release policy.

Review: https://reviews.apache.org/r/59069

--- a/include/mesos/version.hpp.in
+++ b/include/mesos/version.hpp.in
@@ -23,6 +23,9 @@
 
 // TODO(zhitao): Change the string-valued macros to use integers
 // after a deprecation cycle started with 1.1.
+//
+// TODO(neilc): Expose the prerelease label (e.g., "-dev"), if
+// appropriate.
 #define MESOS_MAJOR_VERSION "@MESOS_MAJOR_VERSION@"
 #define MESOS_MAJOR_VERSION_NUM @MESOS_MAJOR_VERSION@
 
